--- a/admin_panel_server/config/production.yaml
+++ b/admin_panel_server/config/production.yaml
@@ -30,10 +30,11 @@ webServer:
 # If you are connecting on a public IP (e.g. on AWS or Google Cloud Run), you
 # connect on the public IP of the database e.g. database.examplepod.com.
 database:
-  host: database.private-production.examplepod.com
+  host: ${DB_HOST}
   port: 5432
-  name: serverpod
-  user: postgres
+  name: ${DB_NAME}
+  user: ${DB_USER}
+  password: ${DB_PASSWORD}
   requireSsl: true
   #isUnixSocket: true # defaults to false
 
